# python-data-structures-practice

./: 03_sets_basics.ipynb  04_combined_practice.ipynb  ACTIONS_FIX_SUMMARY.md  CLAUDE.md  FRAMEWORK_ENHANCEMENT_REPORT.md  FRAMEWORK_USAGE.md  INSTALLATION.md  Makefile  README.md  STUDY_GUIDE.md  _config.yml  index.md  main.py  pyproject.toml  requirements.txt  verify_requirements.py
.github/workflows/: pages.yml
assessments/: ds_while_loops_assessment.ipynb
basics/: 01_lists_basics.ipynb  02_dictionaries_basics.ipynb  04_combined_basics.ipynb
data/: enhanced_sample_data.json  sample_data.json
framework/: README.md
framework/content_types/assessments/: assessment_template.py
framework/examples/: tuples_advanced_config.json
framework/generators/: exercise_generator.py
framework/templates/: data_template.json  solution_template.md
framework/validation/: content_validator.py
notebooks/: 01_lists_basics.ipynb  05_ai_scenarios.ipynb
solutions/: 06_tuples_advanced_solutions.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_STRATEGY.md
solutions/advanced/: 01_combined_optimized.md  02_ai_optimized.md
solutions/basics/: 01_lists_optimized.md  01_lists_solutions.md  02_dictionaries_optimized.md  03_sets_optimized.md
templates/: blank_template.ipynb
tests/: test_smoke.py
