[project]
name = "python-data-structures-practice"
version = "0.1.0"
description = "Educational Python repository for WGU's Master of Science in Software Engineering - AI Engineering program. Focuses on teaching data structures (Lists, Dictionaries, Sets) through Jupyter notebooks with practical exercises."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["notebook==7.4.4", "ipykernel>=6.29.0"]

[project.urls]
"Homepage" = "https://chevyphillip.github.io/python-data-structures-practice/"
"Repository" = "https://github.com/chevyphillip/python-data-structures-practice"
"Documentation" = "https://chevyphillip.github.io/python-data-structures-practice/"
"Installation Guide" = "https://chevyphillip.github.io/python-data-structures-practice/INSTALLATION"
"Study Guide" = "https://chevyphillip.github.io/python-data-structures-practice/STUDY_GUIDE"

[project.optional-dependencies]
dev = ["pytest==8.4.1", "black>=24.0.0", "flake8>=7.0.0", "mypy>=1.8.0"]
enhanced = ["jupyterlab>=4.0.0", "ipywidgets>=8.0.0"]
